updated linear regression page, added better question and data graph. completed menu options Still need to add linear regression possibly

--- a/src/mockup/html/linearRegression.html
+++ b/src/mockup/html/linearRegression.html
@@ -50,18 +50,12 @@
                            <div class="panel-body">
                               <form id="login_form" name="login_form" method="post">
                                  <div>Independent Variable 1:&nbsp;<select name="independentVariable" id="independentVariable">
-                                    <option value="volvo">Cheese Age</option>
-                                    <option value="saab">Saab</option>
-                                    <option value="fiat">Fiat</option>
-                                    <option value="audi">Audi</option>
+                                    <option value="volvo">Cheese Age Range</option>
                                  </select>
                                  <input id="addIndependentVariable" type="button" name="addIndependentVariable" value="Add Independent Variable">
                                  </div>
                                  <div>Dependent Variable:&nbsp;<select name="dependentVariable" id="dependentVariable">
-                                    <option value="volvo">Cheese Hardness</option>
-                                    <option value="saab">Saab</option>
-                                    <option value="fiat">Fiat</option>
-                                    <option value="audi">Audi</option>
+                                    <option value="volvo">Number of Responses</option>
                                  </select></div>
                                  <input id="graphSubmit" type="button" name="graphSubmit" value="Graph">
                               </form>
@@ -83,7 +77,7 @@
                                  <img height="25" width="25" src="../img/add.png" align="right"/></div>
                               </div>
                               <div class="panel panel-default">
-                                 <div class="panel-body">Answered "Gruyere" to question 1
+                                 <div class="panel-body">Style Options
                                  <img height="25" width="25" src="../img/add.png" align="right"/></div>
                               </div>
                            </div>
@@ -121,9 +115,9 @@
                      </div>
                   </div>
                   <div class="panel-body">
-                     <h3>How does cheese hardness change over time?</h3>
+                     <h3>What age cheese do you like?</h3>
                      <div class="row">
-                        <div class="col-sm-8">Type: Multiple Choice</div><div class="col-sm-4"><p class="float-right">Responses: 100</p></div>
+                        <div class="col-sm-8"></div><div class="col-sm-4"><p class="float-right">Responses: 100</p></div>
                      </div>
                      <img src="../img/cheeselrgraph.png" class="">
                   </div>
