Finalized surveyEditorPage and added links between all pages for navigation

--- a/src/mockup/html/designerPanel.html
+++ b/src/mockup/html/designerPanel.html
@@ -21,8 +21,10 @@
       <section class="row masthead">
          <div class="col-sm-6">
             <div class="col-sm-4">
-               <img class="img-rounded center-block" height="120" width="180" src="../img/Logo.png"
-                  alt="placeholder">
+               <a href="./analystPanel.html">
+                  <img class="img-rounded center-block" height="120" width="180" src="../img/Logo.png"
+                     alt="placeholder">
+               </a>
             </div>
             <header class="col-sm-8">
             <h2 class="header-name text-center">XYZ Market Research</h2>
