added y axis scale

--- a/src/mockup/html/linearRegression.html
+++ b/src/mockup/html/linearRegression.html
@@ -57,6 +57,7 @@
                                  <div>Dependent Variable:&nbsp;<select name="dependentVariable" id="dependentVariable">
                                     <option value="volvo">Number of Responses</option>
                                  </select></div>
+                                 <div><input id="yAxisScale" type="text" name="yAxisScale" placeholder="Enter y-axis scale"></div>
                                  <input id="graphSubmit" type="button" name="graphSubmit" value="Graph">
                               </form>
                            </div>
