added all final revisions to the mockups

--- a/src/mockup/html/analysis.html
+++ b/src/mockup/html/analysis.html
@@ -21,13 +21,26 @@
       <section class="row masthead">
          <div class="col-sm-6">
             <div class="col-sm-4">
-               <img class="img-responsive img-rounded center-block" src="http://placehold.it/200x100"
-                  alt="placeholder">
+               <a href="./analystPanel.html">
+                  <img class="img-rounded center-block" height="120" width="180" src="../img/Logo.png"
+                     alt="placeholder">
+               </a>
             </div>
             <header class="col-sm-8">
             <h2 class="header-name text-center">XYZ Market Research</h2>
             <h4 class="sub-header-title text-center">Survey Tool</h4>
          </header>
+         </div>
+         <div class="col-sm-6">
+            <div class="col-sm-6 text-right">
+            </div>
+            <div class="col-sm-5 text-right">
+               john_doe@mrco.com
+            </div>
+            <div class="col-sm-1">
+               <img height="25" width="25" src="../img/settings.png"
+                  alt="placeholder"/>
+            </div>
          </div>
       </section>
 
