--- a/src/mockup/html/analystPanel.html
+++ b/src/mockup/html/analystPanel.html
@@ -93,8 +93,10 @@
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
-                  alt="placeholder"/>
+                           <a href="./analysis.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                      </tr>
                      <tr>
@@ -105,8 +107,10 @@
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
-                  alt="placeholder"/>
+                           <a href="./analysis.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                      </tr>
                      <tr>
@@ -117,8 +121,10 @@
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
-                  alt="placeholder"/>
+                           <a href="./analysis.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                      </tr>
                      <tr>
@@ -129,8 +135,10 @@
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
-                  alt="placeholder"/>
+                           <a href="./analysis.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                      </tr>
                      <tr>
@@ -141,8 +149,10 @@
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
-                  alt="placeholder"/>
+                           <a href="./analysis.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                      </tr>
                      <tr>
@@ -153,67 +163,16 @@
                         <td>11/7/2016</td>
                         <td>@johndoe</td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
-                  alt="placeholder"/>
+                           <a href="./analysis.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                      </tr>
                  </tbody>
                </table>
          </section>
 
-         <section id="surveyTemplates" class="tab-pane row" style="border: 1px solid lightgrey">
-            <div class="col-lg-4 col-sm-6 col-xs-12">
-               <div class="row featured-content">
-                   <div class="col-lg-7 col-md-6 col-sm-7 col-xs-6">
-                     <a href="">
-                     <img class="img-responsive img-rounded center-block" width="200" height="200" src="../img/template.png"
-                        alt="Resume">
-                     </a>
-                  </div>
-                  <div class="col-lg-5 col-md-6 col-sm-5 col-xs-6">
-                     <a href=""><p class="tile-text text-left">Template 1</p></a>
-                     <p class="tile-subtext text-left">Demographics</p>
-                     <p class="text-left">
-                       <a class="tile-subtext" href="">Made by MT</a>
-                     </p>
-                  </div>
-               </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 col-xs-12">
-               <div class="row featured-content">
-                  <div class="col-lg-7 col-md-6 col-sm-7 col-xs-6">
-                     <a href="http://github.com">
-                        <img class="img-responsive img-rounded center-block" width="200" height="200" src="../img/template.png"
-                           alt="Frogger">
-                     </a>
-                  </div>
-                  <div class="col-lg-5 col-md-6 col-sm-5 col-xs-6">
-                     <p class="tile-text text-left">Template 2</p>
-                     <p class="tile-subtext text-left">Conjoint trade-off</p>
-                     <p class="text-left">
-                        <a class="tile-subtext" href="http://isitchristmas.com">Made by MD</a>
-                     </p>
-                  </div>
-               </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 col-xs-12">
-               <div class="row featured-content">
-                  <div class="col-lg-7 col-md-6 col-sm-7 col-xs-6">
-                     <a href="http://sometimesredsometimesblue.com">
-                        <img class="img-responsive img-rounded center-block" width="200" height="200" src="../img/template.png"
-                           alt="sometimesredsometimesblue">
-                     </a>
-                  </div>
-                  <div class="col-lg-5 col-md-6 col-sm-5 col-xs-6">
-                     <p class="tile-text text-left">Template 3</p>
-                     <p class="tile-subtext text-left">A true experience of color</p>
-                     <p class="text-left">
-                        <a class="tile-subtext" href="http://sometimesredsometimesblue.com">The Greatest Website on the Internet</a>
-                     </p>
-                  </div>
-               </div>
-            </div>
-         </section>
 
       </div>
 
