--- a/src/mockup/html/executivePanel.html
+++ b/src/mockup/html/executivePanel.html
@@ -99,16 +99,20 @@
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
-                  alt="placeholder"/>
+                           <a href="./analysis.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
                   alt="placeholder"/>
                         </td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                  alt="placeholder"/>
+                           <a href="./surveyEditorPage.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
@@ -122,16 +126,20 @@
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
-                  alt="placeholder"/>
+                           <a href="./analysis.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
                   alt="placeholder"/>
                         </td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                  alt="placeholder"/>
+                           <a href="./surveyEditorPage.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
@@ -145,16 +153,20 @@
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
-                  alt="placeholder"/>
+                           <a href="./analysis.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
                   alt="placeholder"/>
                         </td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                  alt="placeholder"/>
+                           <a href="./surveyEditorPage.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
@@ -168,16 +180,20 @@
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
-                  alt="placeholder"/>
+                           <a href="./analysis.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
                   alt="placeholder"/>
                         </td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                  alt="placeholder"/>
+                           <a href="./surveyEditorPage.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
@@ -191,16 +207,21 @@
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
-                  alt="placeholder"/>
+                           <a href="./analysis.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
                   alt="placeholder"/>
                         </td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                  alt="placeholder"/>
+                           <a href="./surveyEditorPage.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
+                        alt="placeholder"/>
+                           </a>
+                        </td>holder"/>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
@@ -214,16 +235,20 @@
                         <td>11/7/2016</td>
                         <td>@johndoe</td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
-                  alt="placeholder"/>
+                           <a href="./analysis.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
                   alt="placeholder"/>
                         </td>
                         <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                  alt="placeholder"/>
+                           <a href="./surveyEditorPage.html">
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
+                        alt="placeholder"/>
+                           </a>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
