--- a/src/mockup/html/surveyEditorPage.html
+++ b/src/mockup/html/surveyEditorPage.html
@@ -43,8 +43,20 @@
 
 	    <section class="editor">
 	    <h2>
-	    	Cheeses
+	    	<div class="col-sm-6">
+	    		Cheeses
+	    	</div>
+	    	<div class="col-sm-4"></div>
+	    	<div class="col-sm-1">
+               <a class="btn btn-success text-right" align="right" href="./designerPanel.html">Save</a>
+	    	</div>
+	    	<div class="col-sm-1">
+               <a class="btn btn-success" href="./designerPanel.html">Submit</a>
+	    	</div>
 	    </h2>
+	    	<p>
+	    		 
+	    	</p>
 	    	<div class="col-sm-4">
  				<div class="panel-group" id="accordion">
 				  <div class="panel panel-default">
