--- a/src/mockup/html/linearRegression.html
+++ b/src/mockup/html/linearRegression.html
@@ -18,18 +18,29 @@
 <body>
    <div class="container">
 
-      <section class="row masthead">
-         <div class="col-sm-6">
-            <div class="col-sm-4">
-               <img class="img-responsive img-rounded center-block" src="http://placehold.it/200x100"
-                  alt="placeholder">
-            </div>
-            <header class="col-sm-8">
-            <h2 class="header-name text-center">XYZ Market Research</h2>
-            <h4 class="sub-header-title text-center">Survey Tool</h4>
-         </header>
+       <section class="row masthead">
+            <div class="col-sm-6">
+               <div class="col-sm-4">
+                  <a href="./designerPanel.html">
+                        <img class="img-rounded center-block" height="120" width="180" src="../img/Logo.png" alt="placeholder"/>
+                     </a>
+               </div>
+               <div class="col-sm-8">
+                  <h2 class="header-name text-center">XYZ Market Research</h2>
+                  <h4 class="sub-header-title text-center">Survey Tool</h4>
+              </div>
          </div>
-      </section>
+            <div class="col-sm-6">
+            <div class="col-sm-6 text-right">
+              </div>
+              <div class="col-sm-5 text-right">
+               john_doe@mrco.com
+              </div>
+              <div class="col-sm-1">
+               <img height="25" width="25" src="../img/settings.png" alt="placeholder"/>
+              </div>
+            </div>
+       </section>
 
       <section>
          <h2>Cheeses</h2>
@@ -57,7 +68,11 @@
                                  <div>Dependent Variable:&nbsp;<select name="dependentVariable" id="dependentVariable">
                                     <option value="volvo">Number of Responses</option>
                                  </select></div>
-                                 <div><input id="yAxisScale" type="text" name="yAxisScale" placeholder="Enter y-axis scale"></div>
+                                 <div>Enter y-axis scale:</div>
+                                 <div class="row">
+                                    <div class="col-sm-6">Min: <input id="yAxisMin" type="text" name="yAxisMin" size="9" placeholder="min"></div>
+                                    <div class="col-sm-6">Max: <input id="yAxisMax" type="text" name="yAxisMax" size="9" placeholder="max"></div>
+                                 </div>
                                  <input id="graphSubmit" type="button" name="graphSubmit" value="Graph">
                               </form>
                            </div>
@@ -74,12 +89,10 @@
                      <div id="collapse2" class="panel-collapse collapse">
                            <div class="panel-body">
                               <div class="panel panel-default">
-                                 <div class="panel-body">Calculate Linear Regression
-                                 <img height="25" width="25" src="../img/add.png" align="right"/></div>
+                                 <div class="panel-body"><a>Calculate Linear Regression</a></div>
                               </div>
                               <div class="panel panel-default">
-                                 <div class="panel-body">Style Options
-                                 <img height="25" width="25" src="../img/add.png" align="right"/></div>
+                                 <div class="panel-body"><a>Style Options</a></div>
                               </div>
                            </div>
                         </div>
@@ -95,7 +108,7 @@
                      <div id="collapse3" class="panel-collapse collapse">
                         <div class="panel-body">
                               <div class="panel panel-default">
-                                 <a class="panel-body">Export as PDF</a>
+                                 <a class="panel-body">Export as XLS</a>
                               </div>
                               <div class="panel panel-default">
                                  <a class="panel-body">Export as CSV</a>
