--- a/src/mockup/html/analystPanel.html
+++ b/src/mockup/html/analystPanel.html
@@ -56,14 +56,16 @@
          <div class="col-sm-6">
          	<div class="col-sm-6">
          	</div>
-            <div class="col-sm-4">
-               <input class="searchbar" id="survey_searchbar" type="search" name="search_survey" value="" placeholder="Enter a field to search for"></br>
-            </div>
-            <div class="col-sm-2">
-
-               <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/search.png"
-                  alt="placeholder"/></td>
-            </div>
+            <div class="col-sm-6">
+               <div class="input-group">
+                   <input type="text" class="form-control" placeholder="Search">
+                   <div class="input-group-btn">
+                     <button class="btn btn-default" type="submit">
+                       <i class="glyphicon glyphicon-search"></i>
+                     </button>
+                   </div>
+                 </div>
+               </div>
          </div>
       </section>
 
