--- a/src/mockup/html/executivePanel.html
+++ b/src/mockup/html/executivePanel.html
@@ -55,17 +55,18 @@
             </ul>
          </nav>
          <div class="col-sm-6">
-         <div class="col-sm-6 text-right creation-buttons">
-               
+            <div class="col-sm-6 text-right creation-buttons">
+                  
             </div>
-            <div class="col-sm-4">
-               <input class="searchbar" id="survey_searchbar" type="search" name="search_survey" value="" placeholder="Enter a field to search for"></br>
-            </div>
-            <div class="col-sm-2">
-
-               <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/search.png"
-                  alt="placeholder"/>
-                        </td>
+            <div class="col-sm-6">
+               <div class="input-group">
+                   <input type="text" class="form-control" placeholder="Search">
+                   <div class="input-group-btn">
+                     <button class="btn btn-default" type="submit">
+                       <i class="glyphicon glyphicon-search"></i>
+                     </button>
+                   </div>
+               </div>
             </div>
          </div>
       </section>
@@ -74,18 +75,16 @@
 
          <section id="home" class="tab-pane active row">
             <div class="col-sm-12">
-
                <table class="table table-striped" style="border: 1px solid lightgrey;">
                   <thead>
                      <tr>
                         <th>Survey Name</th>
                         <th>Survey ID</th>
                         <th>Survey Status</th>
-                        <th>Date Created</th>
-                        <th>Last Modified</th>
+                        <th>Opening Date</th>
+                        <th>Closing Date</th>
                         <th>Creator</th>
                         <th>Analyze</th>
-                        <th>Publish</th>
                         <th>Edit</th>
                         <th>Delete</th>
                      </tr>
@@ -103,10 +102,6 @@
                                  <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
                         alt="placeholder"/>
                            </a>
-                        </td>
-                        <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
-                  alt="placeholder"/>
                         </td>
                         <td>
                            <a href="./surveyEditorPage.html">
@@ -130,15 +125,10 @@
                                  <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
                         alt="placeholder"/>
                            </a>
-                        </td>
-                        <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
-                  alt="placeholder"/>
-                        </td>
+                        </td> 
                         <td>
                            <a href="./surveyEditorPage.html">
-                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
-                        alt="placeholder"/>
+                                 <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png" alt="placeholder"/>
                            </a>
                         </td>
                         <td>
@@ -157,11 +147,7 @@
                                  <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
                         alt="placeholder"/>
                            </a>
-                        </td>
-                        <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
-                  alt="placeholder"/>
-                        </td>
+                        </td> 
                         <td>
                            <a href="./surveyEditorPage.html">
                                  <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
@@ -184,11 +170,7 @@
                                  <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
                         alt="placeholder"/>
                            </a>
-                        </td>
-                        <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
-                  alt="placeholder"/>
-                        </td>
+                        </td> 
                         <td>
                            <a href="./surveyEditorPage.html">
                                  <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
@@ -211,17 +193,12 @@
                                  <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
                         alt="placeholder"/>
                            </a>
-                        </td>
-                        <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
-                  alt="placeholder"/>
-                        </td>
+                        </td> 
                         <td>
                            <a href="./surveyEditorPage.html">
                                  <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
                         alt="placeholder"/>
                            </a>
-                        </td>holder"/>
                         </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/delete.png" />
@@ -239,11 +216,7 @@
                                  <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
                         alt="placeholder"/>
                            </a>
-                        </td>
-                        <td>
-                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
-                  alt="placeholder"/>
-                        </td>
+                        </td> 
                         <td>
                            <a href="./surveyEditorPage.html">
                                  <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
