--- a/src/mockup/html/adminPanel.html
+++ b/src/mockup/html/adminPanel.html
@@ -77,7 +77,7 @@
 
 
 	            <div>
-	               <table class="table table-striped" style="border: 1px solid lightgrey;">
+	               <table class="table table-striped table-hover table-user">
 	                  <thead>
 	                     <tr>
 	                        <th>User Name</th>
