--- a/src/mockup/html/analysis.html
+++ b/src/mockup/html/analysis.html
@@ -21,7 +21,7 @@
        <section class="row masthead">
             <div class="col-sm-6">
                <div class="col-sm-4">
-                  <a href="./designerPanel.html">
+                  <a href="./analystPanel.html">
                         <img class="img-rounded center-block" height="120" width="180" src="../img/Logo.png" alt="placeholder"/>
                      </a>
                </div>
