--- a/src/mockup/html/executivePanel.html
+++ b/src/mockup/html/executivePanel.html
@@ -75,7 +75,7 @@
 
          <section id="home" class="tab-pane active row">
             <div class="col-sm-12">
-               <table class="table table-striped" style="border: 1px solid lightgrey;">
+               <table class="table table-striped table-hover table-user">
                   <thead>
                      <tr>
                         <th>Survey Name</th>
